# min_area

./: pyproject.toml  test_min_area.py
min_area/: __init__.py
