[tool.poetry]
name = "min_area"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Halicki <halicki.arkadiusz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
